Input Grid Size

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="config-container" id="ChangeDisplay">
+        <strong style="font-size: 24px;"";">Enter with new grid size</strong>
+        <input type="text" id="input-grid-size">
+        <button id="btnDisplay">GO</button>
+    </div>
+
     <div class="container">
-        
     </div>
 </body>
 </html>
